test_suite/test_programs/errors/error_syntax_recovery.csd
vibe main

yeet "vibez"

fr fr Test: Syntax error recovery
fr fr Purpose: Test parser error handling with various syntax errors
fr fr Expected: Should provide clear error messages for syntax issues

slay main_character() {
fr fr Missing semicolon (if required)
    sus x: normie = 10
    
fr fr Unmatched parentheses
    sus y: normie = (5 + 3;
    
fr fr Missing variable type
    sus z = 42;
    
fr fr Invalid operator usage
    sus result: normie = x +* y;
    
fr fr Unclosed tea literal
    vibez.spill("This tea is not closed properly;
    
fr fr Invalid function call
    non_existent_function();
    
fr fr Missing damn type in function that should damn something
    sus value: normie = broken_function();
    
    damn 0;
}

fr fr Function with missing damn statement
damn broken_function() -> normie {
    sus temp: normie = 5;
fr fr Missing damn statement
}
